shared caching for ColorViewer

--- a/Archimedes.Controls.WPF/Archimedes.Controls.WPF.csproj
+++ b/Archimedes.Controls.WPF/Archimedes.Controls.WPF.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SharedBackbufferCache.cs" />
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
