--- a/Archimedes.Geometry/Archimedes.Geometry.csproj
+++ b/Archimedes.Geometry/Archimedes.Geometry.csproj
@@ -64,6 +64,7 @@
     <Compile Include="IClosedGeometry.cs" />
     <Compile Include="IDrawable.cs" />
     <Compile Include="IGeometryBase.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="PointD.cs" />
     <Compile Include="Primitives\Arc.collision.cs" />
     <Compile Include="Primitives\Arc.cs" />
