--- a/Archimedes.Geometry.Tests/Archimedes.Geometry.Tests.csproj
+++ b/Archimedes.Geometry.Tests/Archimedes.Geometry.Tests.csproj
@@ -50,6 +50,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="AngleTests.cs" />
     <Compile Include="VectorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
