--- a/Archimedes.Geometry.Tests/Archimedes.Geometry.Tests.csproj
+++ b/Archimedes.Geometry.Tests/Archimedes.Geometry.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AngleTests.cs" />
+    <Compile Include="Circle2Tests.cs" />
     <Compile Include="VectorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
