--- a/Archimedes.Geometry/Archimedes.Geometry.csproj
+++ b/Archimedes.Geometry/Archimedes.Geometry.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AABox.cs" />
     <Compile Include="Builder\ConvexHullBuilder.cs" />
     <Compile Include="Builder\PathConnector.cs" />
     <Compile Include="Direction.cs" />
@@ -61,7 +62,7 @@
     <Compile Include="Extensions\PointListExtensions.cs" />
     <Compile Include="Extensions\RectangleExtensions.cs" />
     <Compile Include="GeometrySettings.cs" />
-    <Compile Include="IClosedGeometry.cs" />
+    <Compile Include="IShape.cs" />
     <Compile Include="IDrawable.cs" />
     <Compile Include="IGeometryBase.cs" />
     <Compile Include="Parser.cs" />
