--- a/Archimedes.Geometry/Archimedes.Geometry.csproj
+++ b/Archimedes.Geometry/Archimedes.Geometry.csproj
@@ -56,7 +56,6 @@
     <Compile Include="Direction.cs" />
     <Compile Include="IOrdered.cs" />
     <Compile Include="MathHelper.cs" />
-    <Compile Include="Extensions\BitmapBoundingBox.cs" />
     <Compile Include="Extensions\NumberExtension.cs" />
     <Compile Include="Extensions\PointExtension.cs" />
     <Compile Include="Extensions\PointListExtensions.cs" />
@@ -74,7 +73,6 @@
     <Compile Include="Primitives\Bounds\PolygonSmallestWidthBoundingBoxAlgorythm.cs" />
     <Compile Include="Primitives\Circle2.cs" />
     <Compile Include="Primitives\ComplexGeometry.cs" />
-    <Compile Include="Primitives\GdiText2.cs" />
     <Compile Include="Primitives\ImageDrawable.cs" />
     <Compile Include="Primitives\Line2.Collision.cs" />
     <Compile Include="Primitives\Line2.cs" />
@@ -83,13 +81,9 @@
     <Compile Include="Primitives\Rectangle2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ray.cs" />
-    <Compile Include="Rendering\DrawingGroup.cs" />
-    <Compile Include="Rendering\Effects\IEffect.cs" />
-    <Compile Include="Rendering\Effects\OverlineEffect.cs" />
-    <Compile Include="Rendering\RectangleFUtil.cs" />
-    <Compile Include="Rendering\Renderer.cs" />
-    <Compile Include="Rendering\RenderEventArgs.cs" />
-    <Compile Include="Rendering\ZoomWorker.cs" />
+    <Compile Include="RectangleFUtil.cs" />
+    <Compile Include="Rendering\BitmapUtil.cs" />
+    <Compile Include="Rendering\GdiText2.cs" />
     <Compile Include="SizeD.cs" />
     <Compile Include="Units\Angle.cs" />
     <Compile Include="Units\AngleParser.cs" />
