--- a/Archimedes.Geometry.Rendering/Archimedes.Geometry.Rendering.csproj
+++ b/Archimedes.Geometry.Rendering/Archimedes.Geometry.Rendering.csproj
@@ -50,6 +50,15 @@
     <Compile Include="DrawingGroup.cs" />
     <Compile Include="Effects\IEffect.cs" />
     <Compile Include="Effects\OverlineEffect.cs" />
+    <Compile Include="Primitives\Visual.cs" />
+    <Compile Include="Primitives\VisualCircle.cs" />
+    <Compile Include="Primitives\VisualFactory.cs" />
+    <Compile Include="Primitives\VisualArc.cs" />
+    <Compile Include="Primitives\VisualLine.cs" />
+    <Compile Include="Primitives\VisualLineString.cs" />
+    <Compile Include="Primitives\VisualPoint.cs" />
+    <Compile Include="Primitives\VisualPolygon.cs" />
+    <Compile Include="Primitives\VisualRectangle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleFUtil.cs" />
     <Compile Include="Renderer.cs" />
@@ -65,6 +74,7 @@
   <ItemGroup>
     <None Include="Archimedes.snk" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
