--- a/Archimedes.Tests/Archimedes.Tests.csproj
+++ b/Archimedes.Tests/Archimedes.Tests.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Archimedes.Tests</RootNamespace>
     <AssemblyName>Archimedes.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -25,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -34,6 +36,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -86,6 +89,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -100,10 +104,6 @@
     <ProjectReference Include="..\Archimedes.Geometry\Archimedes.Geometry.csproj">
       <Project>{B16862E8-837A-411A-8D07-09CCDA8CE3D7}</Project>
       <Name>Archimedes.Geometry</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Archimedes.Patterns.Services.WPF\Archimedes.Services.WPF.csproj">
-      <Project>{EA929451-8342-492C-8C16-6E4B15355E7C}</Project>
-      <Name>Archimedes.Services.WPF</Name>
     </ProjectReference>
     <ProjectReference Include="..\Archimedes.Patterns.WPF\Archimedes.Patterns.WPF.csproj">
       <Project>{59FAD24F-15FE-4A5F-B5DE-0E8ADBDF14D7}</Project>
