--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Archimedes.Controls.WPF\packages.config" />
+  <repository path="..\Archimedes.Geometry.Rendering\packages.config" />
   <repository path="..\Archimedes.Geometry.Tests\packages.config" />
 </repositories>
