--- a/Archimedes.Geometry.Rendering/Archimedes.Geometry.Rendering.csproj
+++ b/Archimedes.Geometry.Rendering/Archimedes.Geometry.Rendering.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Primitives\VisualLineString.cs" />
     <Compile Include="Primitives\VisualPoint.cs" />
     <Compile Include="Primitives\VisualPolygon.cs" />
+    <Compile Include="Primitives\VisualAARectangle.cs" />
     <Compile Include="Primitives\VisualRectangle.cs" />
     <Compile Include="Primitives\VisualText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
