--- a/Archimedes.Geometry/Archimedes.Geometry.csproj
+++ b/Archimedes.Geometry/Archimedes.Geometry.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Primitives\Polygon2.collision.cs" />
     <Compile Include="Primitives\Polygon2.cs" />
     <Compile Include="Primitives\Rectangle2.cs" />
+    <Compile Include="Primitives\RectangleAA2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ray.cs" />
     <Compile Include="SizeD.cs" />
