added unit tests for DI container

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,6 @@
   <repository path="..\Archimedes.Controls.WPF\packages.config" />
   <repository path="..\Archimedes.Geometry.Rendering\packages.config" />
   <repository path="..\Archimedes.Geometry.Tests\packages.config" />
+  <repository path="..\Archimedes.Patterns\packages.config" />
+  <repository path="..\Tests\Archimedes.Patterns.Tests\packages.config" />
 </repositories>
