--- a/Archimedes.Patterns/Archimedes.Patterns.csproj
+++ b/Archimedes.Patterns/Archimedes.Patterns.csproj
@@ -54,6 +54,9 @@
     <AssemblyOriginatorKeyFile>Archimedes.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -92,6 +95,7 @@
     <Compile Include="Container\ControllerAttribute.cs" />
     <Compile Include="Container\ElderBox.cs" />
     <Compile Include="Container\ElderModuleConfiguration.cs" />
+    <Compile Include="Container\IModuleConfiguration.cs" />
     <Compile Include="Container\InjectAttribute.cs" />
     <Compile Include="Container\PrimaryAttribute.cs" />
     <Compile Include="Container\ServiceAttribute.cs" />
@@ -179,6 +183,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Archimedes.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
