--- a/Archimedes.Patterns/Archimedes.Patterns.csproj
+++ b/Archimedes.Patterns/Archimedes.Patterns.csproj
@@ -88,19 +88,6 @@
     <Compile Include="Conditions\IOperatorManagerService.cs" />
     <Compile Include="Conditions\Operator.cs" />
     <Compile Include="Conditions\OperatorManagerService.cs" />
-    <Compile Include="Container\AmbiguousMappingException.cs" />
-    <Compile Include="Container\ApplicationContext.cs" />
-    <Compile Include="Container\AutoModuleConfiguration.cs" />
-    <Compile Include="Container\AutowireException.cs" />
-    <Compile Include="Container\ComponentAttribute.cs" />
-    <Compile Include="Container\ControllerAttribute.cs" />
-    <Compile Include="Container\ElderBox.cs" />
-    <Compile Include="Container\ElderModuleConfiguration.cs" />
-    <Compile Include="Container\IModuleConfiguration.cs" />
-    <Compile Include="Container\ImplementationRegistry.cs" />
-    <Compile Include="Container\InjectAttribute.cs" />
-    <Compile Include="Container\PrimaryAttribute.cs" />
-    <Compile Include="Container\ServiceAttribute.cs" />
     <Compile Include="Converters\TimeSpanConverter.cs" />
     <Compile Include="Crypto\StringObfuscator.cs" />
     <Compile Include="Data\Entity.cs" />
@@ -124,6 +111,11 @@
     <Compile Include="Deployment\Installable.cs" />
     <Compile Include="Deployment\IVersionStore.cs" />
     <Compile Include="Deployment\XMLVersionStore.cs" />
+    <Compile Include="DI\ComponentAttribute.cs" />
+    <Compile Include="DI\ControllerAttribute.cs" />
+    <Compile Include="DI\InjectAttribute.cs" />
+    <Compile Include="DI\PrimaryAttribute.cs" />
+    <Compile Include="DI\ServiceAttribute.cs" />
     <Compile Include="EventArgs.cs" />
     <Compile Include="FileSizeFormatProvider.cs" />
     <Compile Include="ICloneable.cs" />
