--- a/Tests/Archimedes.Patterns.Tests/Archimedes.Patterns.Tests.csproj
+++ b/Tests/Archimedes.Patterns.Tests/Archimedes.Patterns.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ContainerTest\ServiceA.cs" />
     <Compile Include="ContainerTest\ServiceAmbig.cs" />
     <Compile Include="ContainerTest\ServiceB.cs" />
+    <Compile Include="ContainerTest\ServiceX.cs" />
     <Compile Include="ContainerTest\ServiceD.cs" />
     <Compile Include="ContainerTest\ServiceC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
