Only allow instancing marked components
This reduces the "magic" a bit. Maybe make it optional...

--- a/Archimedes.DI/Archimedes.DI.csproj
+++ b/Archimedes.DI/Archimedes.DI.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmbiguousMappingException.cs" />
+    <Compile Include="AOPUitl.cs" />
     <Compile Include="ApplicationContext.cs" />
     <Compile Include="AOP\AutoModuleConfiguration.cs" />
     <Compile Include="AutowireException.cs" />
