added configuration management to archimedes

--- a/Archimedes.DI/Archimedes.DI.csproj
+++ b/Archimedes.DI/Archimedes.DI.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="AmbiguousMappingException.cs" />
     <Compile Include="AOPUitl.cs" />
+    <Compile Include="AOP\ComponentScanner.cs" />
     <Compile Include="ApplicationContext.cs" />
     <Compile Include="AOP\AutoModuleConfiguration.cs" />
     <Compile Include="AutowireException.cs" />
